[package]
name = "stellar-base"
version = "0.7.0"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
edition = "2021"
description = "Low level Stellar types"
license = "Apache-2.0"
documentation = "https://docs.rs/stellar-base"
repository = "https://github.com/aurora-rs/stellar-base-rs"
readme = "README.md"
keywords = ["stellar", "blockchain"]

[dependencies]
base32 = "0.5.1"
base64 = "0.22.1"
bitflags = "2.4"
byteorder = "1.4.3"
chrono = "0.4.19"
crc16 = "0.4.0"
ed25519 = "2.2.3"
json = "0.12.4"
num-traits = "0.2.14"
num-bigint = "0.4.3"
num-rational = "0.4.0"
rust_decimal = "1.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.1"
thiserror = "2.0.12"
stellar-xdr = { version = "24", default-features = true, features = [] }

[dependencies.ed25519-dalek]
version = "2.1.1"
features = ["rand_core"]
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dev-dependencies]
ring-compat = "0.8.0"

[features]
default = ["dalek"]
dalek = ["ed25519-dalek", "rand"]
