[package]
name = "example"
version = "0.1.0"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
edition = "2018"

[dependencies]
stellar-base = { path = "../stellar-base" }
stellar-horizon = { path = "../stellar-horizon" }
anyhow = "1.0.31"
futures = "0.3.5"
reqwest = { version = "0.10.6", features = ["json"] }
tokio = { version = "0.2.21", features = ["full"] }